--- a/main.html
+++ b/main.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
 	<meta name="version" content="1.6"/>
 	<meta name="versionBuild" content="1.6"/> <!--Version without sub dots(.) 1.2.1 would be 1.21 -->
@@ -142,7 +142,7 @@ Make sure the last 3 fights are set correctly.
 	initGC("imp")				
 	function initGC (faction){
 		var updatedVersion = 
-				getJSON('https://raw.githubusercontent.com/9Tpercentmon/gc_calc/main/ver_check.json',
+				getJSON('https://raw.githubusercontent.com/9Tpercentmon/swbf2_gc_simulator/main/ver_check.json',
 					function(err, data) {
 					  if (err !== null) {
 						alert('Something went wrong: ' + err);
@@ -243,12 +243,6 @@ Make sure the last 3 fights are set correctly.
 		
 	}
 	
-	
-	
-
-	
-	
-	
-	
 </script>
 	
+</html>
