--- a/main.html
+++ b/main.html
@@ -1,14 +1,14 @@
 <html>
 <head>
-	<meta name="version" content="1.6.1"/>
-	<meta name="versionBuild" content="1.61"/> <!--Version without sub dots(.) 1.2.1 would be 1.21 -->
+	<meta name="version" content="1.6.2"/>
+	<meta name="versionBuild" content="1.62"/> <!--Version without sub dots(.) 1.2.1 would be 1.21 -->
 	<title>Sim GC by 9Tpercentmon</title>
 
 <link rel="stylesheet" type="text/css" href="css/gc.css">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
 </head>
-<body class="bg-dark text-white" style="margin:20;padding:0;font-size:18">
+<body class="bg-dark text-white">
 <div id="alertVersion" style="color: red" class="text-danger"> </div>
 <br>
 <button id="repGCBtn" value="rep" onClick="initGC(this.value)" class="btn btn-light">Republic Campaign</button >
